--- a/Group1_HW_Set1.Rmd
+++ b/Group1_HW_Set1.Rmd
@@ -700,8 +700,8 @@ be of value.
 ## Question
 
 A classic example of a non-stationary series is the daily closing IBM stock
-price series (data set ibmclose). Use R to plot the daily closing prices for IBM
-stock and the ACF and PACF. Explain how each plot shows that the series is
+price series (data set `ibmclose`). Use R to plot the daily closing prices for
+IBM stock and the ACF and PACF. Explain how each plot shows that the series is
 non-stationary and should be differenced.
 
 ```{r 82Q1}
@@ -731,12 +731,11 @@ indicates non-stationary data which can likely be fixed by a first difference.
 
 # Question HA 8.6
 ## Question
-
 Use R to simulate and plot some data from simple ARIMA models.
 
 ### Part A
 Use the following R code to generate data from an AR(1) model with
-ϕ1 = 0.6 and σ2 = 1. The process starts with y1 = 0.
+\(\phi_1 = 0.6\) and \(\sigma^2 = 1\). The process starts with \(y_1 = 0\).
 
 ```{r 86a1}
 y <- ts(numeric(100))
@@ -746,7 +745,8 @@ for(i in 2:100)
 ```
 
 ### Part B
-Produce a time plot for the series. How does the plot change as you change ϕ1?
+Produce a time plot for the series. How does the plot change as you change
+\(\phi_1\)?
 
 ```{r 86b1}
 for(i in c(-0.8, -0.6, -0.4, -0.2, 0.2, 0.4, 0.6, 0.8)){
@@ -760,14 +760,14 @@ for(i in c(-0.8, -0.6, -0.4, -0.2, 0.2, 0.4, 0.6, 0.8)){
 }
 ```
 
-The value chosen for phi affects how volatile the series is. Negative values
-close to -1 force the series to oscillate across the mean nearly every
-observation, whereas positive values for phi close to 1 show much less
+The value chosen for \(\phi\) affects how volatile the series is. Negative
+values close to -1 force the series to oscillate across the mean nearly every
+observation, whereas positive values for \(\phi\) close to 1 show much less
 volatility and are smoother overall.
 
 ### Part C
-Write your own code to generate data from an MA(1) model with θ1 = 0.6 and
-σ2 = 1.
+Write your own code to generate data from an MA(1) model with \(\theta_1 = 0.6\)
+and \(\sigma^2 = 1\).
 
 ```{r 86c1}
 set.seed(42)
@@ -782,15 +782,16 @@ for (theta in c(-1, -0.6, -0.3, 0, 0.3, 0.6, 1)){
 ```
 
 ### Part D
-Produce a time plot for the series. How does the plot change as you change θ1?
+Produce a time plot for the series. How does the plot change as you change
+\(\theta_1\)?
 
-As theta approaches 1, the time series appears to resemble a random walk.
-However, as theta approaches -1, the time series oscillates rapidly across the
-mean with almost every step in the series.
+As \(\theta\) approaches 1, the time series appears to resemble a random walk.
+However, as \(\theta\) approaches -1, the time series oscillates rapidly across
+the mean with almost every step in the series.
 
 ### Part E
-Generate data from an ARMA(1,1) model with ϕ1 = 0.6, 
-θ1 = 0.6 and σ2 = 1.
+Generate data from an ARMA(1,1) model with \(\phi_1 = 0.6, \theta_1 = 0.6\), and
+\(\sigma^2 = 1\).
 
 ```{r 86e1}
 phi <- 0.6
@@ -803,8 +804,9 @@ for(i in 2:100){
 ```
 
 ### Part F
-Generate data from an AR(2) model with ϕ1 = −0.8, ϕ2 = 0.3 and σ2 = 1. (Note
-that these parameters will give a non-stationary series.)
+Generate data from an AR(2) model with \(\phi_1 = −0.8\), \(\phi_1 = 0.3\),
+and \(\sigma^2 = 1\). (Note that these parameters will give a non-stationary
+series.)
 
 ```{r 86f1}
 phi1 <- -0.8
@@ -826,27 +828,26 @@ autoplot(y_ar) + xlab('AR 2 Model')
 ```
 
 The time series are extremely different as the AR 2 model is divergent. This is
-because The phi1 parameter makes the series oscillate, but the phi2 parameter
-has a positive sign and increases the size of the oscillations. Since phi1 and
-phi2 add to greater than 1, the oscillations diverge rather than converge. This
-leads to a time series with ever increasing amplitudes rather than the
-stationary time series we observe with the ARMA model.
+because The \(\phi_1\) parameter makes the series oscillate, but the \(\phi_2\)
+parameter has a positive sign and increases the size of the oscillations. Since
+\(\phi_1\) and \(\phi_2\) add to greater than 1, the oscillations diverge rather
+than converge. This leads to a time series with ever increasing amplitudes
+rather than the stationary time series we observe with the ARMA model.
 
 # Question HA 8.8
 ## Question
 
-Consider austa, the total international visitors to Australia (in millions) for
-the period 1980-2015.
+Consider `austa`, the total international visitors to Australia (in millions)
+for the period 1980--2015.
 
 ### Part A
-Use auto.arima() to find an appropriate ARIMA model. What model was selected.
+Use `auto.arima()` to find an appropriate ARIMA model. What model was selected.
 Check that the residuals look like white noise. Plot forecasts for the next 10
 periods.
 
 ```{r 88a1}
 arima_model <- auto.arima(austa)
 arima_model
-
 ```
 
 Auto Arima has selected an ARIMA(0, 1, 1) with drift.
@@ -884,7 +885,8 @@ see what happens.
 fit <- Arima(austa, c(2, 1, 3), include.drift = T)
 autoplot(forecast(fit, h = 10))
 
-fit_no_c <- Arima(austa, c(2,1,3), include.drift = T, include.constant = F, method = 'ML')
+fit_no_c <- Arima(austa, c(2,1,3), include.drift = T, include.constant = F,
+                  method = 'ML')
 autoplot(forecast(fit_no_c, h = 10))
 ```
 
